[gd_scene load_steps=22 format=3 uid="uid://b114b6wtf3320"]

[ext_resource type="Texture2D" uid="uid://mk4hd1chb5ib" path="res://Assets/Resources/IMG_4495.PNG" id="1_f1v4l"]
[ext_resource type="Script" uid="uid://cj4p5xp7o4ipw" path="res://Scripts/menu_ui.gd" id="1_seknk"]
[ext_resource type="Texture2D" uid="uid://gb8otax28m0u" path="res://Assets/Ui/play_btn_normal.png" id="2_23r57"]
[ext_resource type="Texture2D" uid="uid://dr2bxl72oamw" path="res://Assets/Ui/bottom_constrast_gradient.png" id="3_l0cbg"]
[ext_resource type="Texture2D" uid="uid://ba8ncksfdpo3s" path="res://Assets/Ui/play_btn_hovered.png" id="3_uc07g"]
[ext_resource type="Texture2D" uid="uid://dlncn11vxu70s" path="res://Assets/Ui/play_btn_pressed.png" id="3_xtm07"]
[ext_resource type="Texture2D" uid="uid://bp0hbqb63uc5j" path="res://Assets/Ui/setting_btn_normal.png" id="5_kabj0"]
[ext_resource type="Texture2D" uid="uid://bmxoboegy82j6" path="res://Assets/Ui/setting_btn_hovered.png" id="6_001ub"]
[ext_resource type="Texture2D" uid="uid://cgq7wst0coasb" path="res://Assets/Ui/setting_btn_pressed.png" id="7_l0cbg"]
[ext_resource type="Texture2D" uid="uid://cxghov6hqyqye" path="res://Assets/Ui/menu_title.png" id="8_001ub"]
[ext_resource type="FontFile" uid="uid://c1gs066s21wdi" path="res://Assets/Ui/Unifontexmono-2vrqo.ttf" id="12_2oxgs"]
[ext_resource type="FontFile" uid="uid://o4btb7ie62pi" path="res://Assets/Ui/PixelifySans-VariableFont_wght.ttf" id="12_n20v2"]

[sub_resource type="Animation" id="Animation_n20v2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-49, -45)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuBackground:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_2oxgs"]
resource_name = "background"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MenuBackground:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.33333, 2.73333, 4.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-49, 2.94), Vector2(-57.474, -10), Vector2(-66, -32.26), Vector2(-13, -7)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MenuBackground:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.98, 4.56),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0349066, 0.0, 0.0122173]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_10shu"]
_data = {
&"RESET": SubResource("Animation_n20v2"),
&"background": SubResource("Animation_2oxgs")
}

[sub_resource type="LabelSettings" id="LabelSettings_seknk"]
font = ExtResource("12_2oxgs")
font_size = 166
font_color = Color(0.94902, 0.631373, 0.313726, 1)
shadow_size = 35
shadow_color = Color(0, 0, 0, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_10shu"]
font = ExtResource("12_n20v2")
font_size = 65
font_color = Color(0.94902, 0.631373, 0.313726, 1)
shadow_size = 35
shadow_color = Color(0, 0, 0, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_n20v2"]
font = ExtResource("12_2oxgs")
font_size = 100
font_color = Color(0.95, 0.599925, 0.3135, 1)
shadow_size = 35
shadow_color = Color(0, 0, 0, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_mn5po"]
font = ExtResource("12_2oxgs")
font_size = 166
font_color = Color(0.972988, 0.747178, 1.54018e-06, 1)
shadow_size = 35
shadow_color = Color(0, 0, 0, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_2oxgs"]
font = ExtResource("12_n20v2")
font_size = 65
font_color = Color(0.972549, 0.74902, 0, 1)
shadow_size = 35
shadow_color = Color(0, 0, 0, 0.588235)

[sub_resource type="LabelSettings" id="LabelSettings_3tegh"]
font = ExtResource("12_2oxgs")
font_size = 100
font_color = Color(0.972549, 0.74902, 0.0117647, 1)
shadow_size = 35
shadow_color = Color(0, 0, 0, 0.588235)

[node name="MenuUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_seknk")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_10shu")
}
autoplay = "background"
next/background = &"background"
blend_times = [&"background", &"background", 0.1]

[node name="MenuBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -49.0
offset_top = -45.0
offset_right = -49.0
offset_bottom = -45.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.05591, 1.05591)
pivot_offset = Vector2(1267.86, 762.933)
texture = ExtResource("1_f1v4l")
stretch_mode = 6

[node name="MenuTitle" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 35.0
offset_top = 31.0
offset_right = 1308.0
offset_bottom = 374.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_001ub")
expand_mode = 2
stretch_mode = 4

[node name="Contrast" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -278.0
grow_horizontal = 2
grow_vertical = 0
texture = ExtResource("3_l0cbg")
expand_mode = 2
stretch_mode = 6

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -671.0
offset_top = -280.0
offset_right = 688.0
offset_bottom = 380.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(679.5, 0)
texture_normal = ExtResource("2_23r57")
texture_pressed = ExtResource("3_xtm07")
texture_hover = ExtResource("3_uc07g")
stretch_mode = 5

[node name="SettingButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -710.0
offset_top = -244.0
offset_right = 45.0
offset_bottom = 456.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.35, 0.35)
pivot_offset = Vector2(679.5, 0)
texture_normal = ExtResource("5_kabj0")
texture_pressed = ExtResource("7_l0cbg")
texture_hover = ExtResource("6_001ub")
stretch_mode = 5

[node name="ScoreHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -828.0
offset_top = -238.0
offset_right = -183.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="ScoreIconLabel" type="Label" parent="ScoreHBoxContainer"]
layout_mode = 2
text = "⸫"
label_settings = SubResource("LabelSettings_seknk")

[node name="ScoreTextLabel" type="Label" parent="ScoreHBoxContainer"]
layout_mode = 2
text = " gears: "
label_settings = SubResource("LabelSettings_10shu")

[node name="ScoreLabel" type="Label" parent="ScoreHBoxContainer"]
layout_mode = 2
text = "9999"
label_settings = SubResource("LabelSettings_n20v2")

[node name="TopHBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 202.0
offset_top = -238.0
offset_right = 746.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="TopIconLabel" type="Label" parent="TopHBoxContainer"]
layout_mode = 2
text = "★"
label_settings = SubResource("LabelSettings_mn5po")

[node name="TopTextLabel" type="Label" parent="TopHBoxContainer"]
layout_mode = 2
text = " top: "
label_settings = SubResource("LabelSettings_2oxgs")

[node name="TopLabel" type="Label" parent="TopHBoxContainer"]
layout_mode = 2
text = "9999"
label_settings = SubResource("LabelSettings_3tegh")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
